2000-11-10  Torbjorn Granlund  <tege@swox.com>

	* configure.in [path switch] (alphaev6*-*-*): Add alpha/ev5 to path.

	* mpn/alpha/ev6/add_n.asm: New file.

2000-11-10  Kevin Ryde  <kevin@swox.se>

	* mpz/powm.c (redc): Make global under WANT_REDC_GLOBAL.
	* tune/powm_mod.c, tune/powm_redc.c: New files.
	* tune/Makefile.am (libspeed_la_SOURCES): Add them.
	* tune/*: Add measuring of redc, mpz_mod, mpz_powm_mod,	mpz_powm_redc.

	* tune/tuneup.c (POWM_THRESHOLD): Determine from redc and mpz_mod.
	* tune/Makefile.am (TUNE_MPZ_SRCS): Remove powm.

2000-11-10  Torbjorn Granlund  <tege@swox.com>

	* mpn/mips3/gmp-mparam.h: Retune.

	* configure.in (os_64bit): Rename to check_64bit_compiler.

2000-11-09  Torbjorn Granlund  <tege@swox.com>

	* configure.in [SPEED_CYCLECOUNTER_OBJS switch]: Choose hppa/hppa2 code
	depending on $CC64.

2000-11-09  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/pentium/mul_1.asm: Unroll 2x, saving 1 c/l when in L1.
	Add 1c entrypoint.
	* mpn/x86/pentium/aorsmul_1.asm: Add 1c entrypoints, shave a couple
	of cycles at entry and exit.

	* configure.in (power1,2,2sc): Support these as synonyms for plain
	power.

	* acinclude.m4 (GMP_ASM_X86_SHLDL_CL): GMP_DEFINE WANT_SHLDL_CL here.
	(GMP_ASM_X86_MMX, GMP_ASM_X86_SHLDL_CL): Add X86 into the names.
	* configure.in: Consequent changes.

	* gmp.texi (Notes for Particular Systems): Remarks about power/powerpc.
	(Reentrancy): Remarks about simultaneous writing.
	(Reporting Bugs): Ask for configfsf.guess.

2000-11-08  Kevin Ryde  <kevin@swox.se>

	* acinclude.m4 (GMP_FUNC_ALLOCA): New macro.
	* configure.in: Use it.
	* gmp-impl.h (alloca): Conditionals and setups as per autoconf
	(should make alloca available on more non-gcc compilers).

	* acinclude.m4: Misc reformatting, simplify some quoting.
	(GMP_ASM_UNDERSCORE, GMP_ASM_X86_MCOUNT): Use $CC $CFLAGS $CPPFLAGS.
	(GMP_ASM_UNDERSCORE, GMP_ASM_ALIGN_FILL_0x90, GMP_ASM_RODATA): Put
	AC_REQUIREs outside AC_CACHE_CHECK.